k8s/staging/namespace.yaml
# Staging Namespace
# Auto-generated: 2026-02-26
apiVersion: v1
kind: Namespace
metadata:
  name: superprismora-staging
  labels:
    environment: staging
    app: superprismora
